# GameOfLife

./: .gitignore  CMakeLists.txt
.ccls-cache/@@home@ford@Documents@Programming@C++@GameOfLife/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@assert.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@local_lim.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@posix1_lim.h.blob  @usr@include@bits@posix2_lim.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@sys_errlist.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@timex.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  (+316 more)
include/: cell.hpp  gamewindow.hpp
src/: cell.cpp  gamewindow.cpp  main.cpp
(+17 files in other folders)
